--- a/assets/css/global-styles.css
+++ b/assets/css/global-styles.css
@@ -405,3 +405,86 @@ Footer CSS
 .footer-content-col-icons img:last-child {
     margin-right: 0;
 }
+
+/* Modal Background */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: var(--white);
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid var(--white);
+    width: 80%;
+    max-width: 600px;
+    border-radius: 0.5rem;
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    font-weight: bold;
+    font-size: 18px;
+    font-weight: bold;
+    color: var(--grey-text);
+}
+
+.modal-header-splitter {
+    height: 0.125rem;
+    background-color: var(--light-grey);
+    margin: 0.625rem 0rem;
+}
+
+/* Close Button */
+.modal-close {
+    font-size: 28px;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+    color: var(--black);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Modal Filter Content */
+.modal-filter-content {
+    /* margin-bottom: 20px; */
+    line-height: 2rem;
+    margin: .625rem 0rem;
+}
+
+/* Show Results Button */
+.modal-show-results {
+    background-color: #4CAF50;
+    /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+/* Class to disable scrolling */
+.no-scroll {
+    overflow: hidden;
+    /* Prevents scrolling */
+}
